RESOLVED FIXED117012
Fix paint-related milestones to not fire when the layer tree is frozen
https://bugs.webkit.org/show_bug.cgi?id=117012
Summary Fix paint-related milestones to not fire when the layer tree is frozen
Simon Fraser (smfr)
Reported 2013-05-29 18:46:52 PDT
Fix paint-related milestones to not fire when the layer tree is frozen
Attachments
Patch (5.28 KB, patch)
2013-05-29 18:50 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-05-29 18:50:34 PDT
Simon Fraser (smfr)
Comment 2 2013-05-29 21:34:46 PDT
Simon Fraser (smfr)
Comment 3 2013-05-29 21:35:44 PDT
Note You need to log in before you can comment on or make changes to this bug.