Fix paint-related milestones to not fire when the layer tree is frozen https://bugs.webkit.org/show_bug.cgi?id=117012

Source/WebCore:

Reviewed by Tim Horton.

In the previous code, it was possible to paint some layer and schedule
the m_paintRelatedMilestonesTimer, but then the layer tree was put into
a frozen state because the page redirected. However, the paint-related
milestones timer would still fire. This caused woes with header/footer
banners.

Fix by not firing paint-related milestones if the layer tree is frozen,
which we know via a new ChromeClient callback. When unfrozen, we'll
paint again, and fire the timer later.

* page/ChromeClient.h:
(WebCore::ChromeClient::layerTreeStateIsFrozen):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::paintRelatedMilestonesTimerFired):

Source/WebKit2:

Reviewed by Tim Horton.

Implement ChromeClient::layerTreeStateIsFrozen() to return
the frozen state of the drawing area.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::layerTreeStateIsFrozen):
* WebProcess/WebCoreSupport/WebChromeClient.h:
(WebChromeClient):

Canonical link: https://commits.webkit.org/135280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150948 268f45cc-cd09-0410-ab3c-d52691b4dbfc